fixed alignment on index page

--- a/assets/boostrap-style.css
+++ b/assets/boostrap-style.css
@@ -1,3 +1,4 @@
+
 /* HEADING 1 */
 h1 {
   width: 220px;
@@ -10,10 +11,13 @@ h1 {
 }
 
 /* HEADING 2*/
-h2 {
+#h2 {
   color: #4aaaa5;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+/* PARAGRAPH */
+
 
 /* CONTAINER FOR THE IMAGE BOXES */
   .box-set {
